allowing up to 6 chronometers

--- a/Swfc/res/layout/chronometer_list.xml
+++ b/Swfc/res/layout/chronometer_list.xml
@@ -31,4 +31,16 @@
 		android:layout_height="fill_parent"
 		android:layout_weight="1"
 		/>
+	<include 
+		layout="@layout/chrono_item_chrono"
+		android:layout_width="fill_parent"
+		android:layout_height="fill_parent"
+		android:layout_weight="1"
+		/>
+	<include 
+		layout="@layout/chrono_item_chrono"
+		android:layout_width="fill_parent"
+		android:layout_height="fill_parent"
+		android:layout_weight="1"
+		/>
 </LinearLayout>
