--- a/Swfc/res/values/strings_buttons.xml
+++ b/Swfc/res/values/strings_buttons.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<string name="CompetitonChronoStart">Start!</string>
-	<string name="CompetitonChronoStop">Done</string>
-	<string name="CompetitonChronoClear">Clear</string>
-	<string name="CompetitonChronoSave">Save</string>
-	
-	<string name="CompetitonChronoToggleLap">Lap</string>
-	<string name="CompetitonChronoToggleTotal">Total</string>
-	<string name="CompetitonChronoToggleButton">Lap/Total</string>
+	<string name="competiton_chrono_start">Start!</string>
+	<string name="competiton_chrono_stop">Done</string>
+	<string name="competiton_chrono_clear">Clear</string>
+	<string name="competiton_chrono_save">Save</string>
+	<string name="competiton_chrono_toggle_lap">Lap</string>
+	<string name="competiton_chrono_toggle_total">Total</string>
+	<string name="competiton_chrono_toggle_button">Lap/Total</string>
 </resources>
