--- a/Swfc/res/layout/menu_layout.xml
+++ b/Swfc/res/layout/menu_layout.xml
@@ -10,6 +10,7 @@
     	android:focusableInTouchMode="true"
     	android:layout_width="0px" 
     	android:layout_height="0px"
+        android:background="@android:color/transparent"
     	/>
 	<LinearLayout 
 	    android:layout_width="fill_parent"
