--- a/Swfc/res/values/styles_sizes.xml
+++ b/Swfc/res/values/styles_sizes.xml
@@ -2,20 +2,20 @@
 <!-- OTHER SIZES -->
 <resources >	
 	<style name="chrono_text" >
-	   <item name="android:textSize">22dp</item>
+	   <item name="android:textSize">22sp</item>
 	   <item name="android:textColor">@color/black</item>
 	</style>
 	<style name="chrono_headers" >
-	   <item name="android:textSize">15dp</item>
+	   <item name="android:textSize">15sp</item>
 	</style>
 	<style name="chrono_laps" >
-	   <item name="android:textSize">12dp</item>
+	   <item name="android:textSize">12sp</item>
 	</style>
 	<style name="chrono_main_chrono">
-		<item name="android:textSize">40dp</item>
+		<item name="android:textSize">40sp</item>
 	</style>
 	<style name="show_laps" >
-	   <item name="android:textSize">16dp</item>
+	   <item name="android:textSize">16sp</item>
 	   <item name="android:textStyle">bold</item>
 	   <item name="android:textColor">@android:color/black</item>
 	   <item name="android:typeface">monospace</item>
